test/MC/SVE/regression-tests/negative_tests/sve-st4b-001.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU8E4Store1LSSZ
// Offset register Rm cannot be xzr
st4b {z10.b, z11.b, z12.b, z13.b}, p5, [x19, xzr]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
